switch to new theme

--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-<html>
-
-<body>
-
-<h1>
-  Hello World
-</h1>
-
-  <p>
-      lkasdjflksajdfl
-      here is some more
-      and more and more
-  </p>
-
-
-</body>
-
-</html>
+---
+layout: default
+---
